# pippal

./: .codex-plan.md  .gitignore  CHANGELOG.md  CODEREVIEW.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  README.txt  ROADMAP.md  conftest.py  pippal_open.py  pyproject.toml  pytest.ini  reader_app.py  reader_app_free.py  reader_app_qt.py  reader_app_web.py  setup.ps1  start_console.bat  start_server.vbs
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: check-bench.yml  ci.yml  e2e-windows.yml  gate-lint-unit.yml  gate-web-e2e.yml  journey-evidence.yml  journey-real-app.yml  release-installer.yml  tier2-journey.yml  ui-web-e2e.yml
.serena/: project.yml
bench-baselines/Linux-CPython-3.11-64bit/: 0001_baseline.json
docs/: CODEREVIEW.md  CONTRIBUTING.md  CORE_COMPETITOR_MATRIX_EVIDENCE_2026-05-14.md  CORE_TRUST.md  FIRST_RUN_ACTIVATION.md  LIVE_UI_E2E_RELEASE_GATE.md  PRIVACY.md  RELEASE_CHECKLIST.md  ROADMAP.md  SELECTED_TEXT_RELIABILITY.md  TERMS.md  THIRD_PARTY.md  UI_FIT_QA.md  USE_CASE_BACKLOG.md
docs/migration-qt/: LICENSING.md  README.md  _capture_qt.py  _capture_qt_real.py  _capture_tk.py  _smoke_qt_app.py
docs/migration-web/: LICENSING.md  README.md  UI_TEST_CHECKLIST.md
e2e/: README.md  conftest.py  pippal_e2e.py  requirements.txt  run-local.ps1  run-ui-smokes.ps1  test_public_live_ui.py
e2e/journey/: README.md  __init__.py  _journey_helpers.py  _recording.py  app_launcher.py  conftest.py  run-journey.ps1  test_journey_phase4.py  test_journey_phase5.py  test_journeys.py
e2e/qt/: README.md  conftest.py  requirements.txt  test_qt_ui_e2e.py
e2e/web/: README.md  conftest.py  requirements.txt  test_core_interactions.py  test_core_phase3.py  test_core_phase4.py  test_core_phase5.py  test_error_recovery.py  test_tray_hotkey_integration.py  test_web_ui.py  test_web_ui_controls.py
packaging/: pippal.spec  pippal_launch.py
packaging/installer/: pippal.iss
pippal/: _register_free.py  app.py  clipboard_capture.py  config.py  context_menu.py  engine.py  tray.py
pippal/engines/: __init__.py  factory.py  piper.py
pippal/ui/: overlay.py  overlay_paint.py  settings_cards.py  settings_window.py  theme.py  voice_manager.py
src/pippal/: __init__.py  __main__.py  _register.py  app.py  app_qt.py  clipboard_capture.py  command_server.py  config.py  context_menu.py  diag_async.py  diag_core_bridge.py  diag_trace.py  diagnostics.py  engine.py  engine_actions.py  history.py  hotkey.py  notices.py  ollama_client.py  onboarding.py  open_file.py  overlay_actions.py  paths.py  playback.py  plugins.py  pronunciation.py  qt_command_adapters.py  text_utils.py  timing.py  tray.py  voice_install.py  voices.py  wav_utils.py
src/pippal/engines/: __init__.py  base.py  factory.py  piper.py
src/pippal/ui/: __init__.py  activation_panel.py  notices_card.py  overlay.py  overlay_paint.py  settings_cards.py  settings_window.py  theme.py  (+1 more)
tests/: conftest.py  test_activation_panel.py  test_app_single_instance.py  test_bridge_overlay_action.py  test_bridge_remove_voice.py  test_capture_before_overlay.py  test_clipboard_capture.py  test_close_hide_behavior.py  test_command_server.py  test_config.py  test_context_menu.py  test_data_root_packaged.py  test_diagnostics_core.py  test_diagnostics_nonblocking.py  test_diagnostics_privacy.py  test_diagnostics_session_start.py  test_diagnostics_trace.py  test_engine.py  test_engines.py  test_free_basic_behaviors.py  test_free_pro_parity_basics.py  test_history.py  test_hotkey.py  test_karaoke_overlay_race.py  test_launch_scripts.py  test_notices.py  test_notices_card.py  test_ollama_client.py  test_onboarding.py  test_overlay_loading_first.py  test_overlay_nav_event_driven.py  test_overlay_resume_clock.py  test_overlay_window_controller.py  test_paths.py  test_pippal_open.py  test_playback.py  test_plugin_host.py  test_pronunciation.py  test_rapid_forward_wedge.py  test_reading_drives_overlay_state.py  (+13 more)
tests/benchmarks/: test_bench_hotkey.py  test_bench_io.py  test_bench_plugins.py  test_bench_text.py  test_bench_voices.py
tests/e2e/: conftest.py  test_synth_pipeline.py  test_voice_catalog_urls.py
tests/smoke/: test_install_surface.py
tests/ui_smokes/: _harness.py  conftest.py  diag_card.test.mjs  free_ui_smoke.test.mjs  pro_parity.test.mjs  promo_banner.test.mjs  test_editor_terminal_chat_smokes.py  test_pdf_smokes.py  test_selected_text_smokes.py
webui/: index.html
webui/css/: overlay.css  surfaces.css  theme.css
webui/js/: api.js  app-core.js  app.js  components.js  main.js  notices.js  onboarding.js  overlay.js  pro_bridge_resilient.js  pro_diag_instrument.js  settings-cards.js  settings-footer.js  settings-stub.js  settings.js  voices.js
(+21 files in other folders)
