[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pippal"
version = "0.2.0"
description = "Your little offline reading buddy — Windows tray TTS reader"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bug Factory Kft.", email = "hello@bugfactory.hu" }]
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
    # `keyboard` ships an X11 backend on Linux that grabs DISPLAY at
    # import time and a kernel-input backend that needs root. PipPal
    # is a Windows-only app, so pin the dep to Windows; tests on a
    # headless Linux runner just stub the import in conftest.
    'keyboard ; platform_system == "Windows"',
    "pyperclip",
    "pystray",
    "Pillow",
]

[project.optional-dependencies]
kokoro = ["kokoro-onnx", "soundfile"]
dev = ["pytest>=7", "pytest-benchmark>=4", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
pippal = "pippal.app:main"
pippal-open = "pippal_open:main"

[project.urls]
Homepage   = "https://pippal.bugfactory.hu"
Repository = "https://github.com/bug-factory-kft/pippal"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line length — soft cap; let formatter decide
    "E701",   # only flag inline statements when they hide a bug
    "B008",   # function-call in default argument (we use this for `path: Path = CONFIG_PATH` paths)
    "B905",   # zip without strict — Python 3.10+ default is fine here
    "RUF001", # ambiguous unicode in strings (×, –, — are intentional)
    "RUF002", # ambiguous unicode in docstrings (×, ·, etc.)
    "RUF003", # ambiguous unicode in comments
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src/pippal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Benchmark suite lives under tests/benchmarks/. By default we skip
# it so the regular `python -m pytest` runs in seconds and stays
# deterministic (benchmark wall-clock varies by machine load). To
# run it: `pytest tests/benchmarks --benchmark-only`.
addopts = "-ra --strict-markers --ignore=tests/benchmarks"
filterwarnings = ["ignore::DeprecationWarning"]
